Relax the dependencies

--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "dev-master",
-        "doctrine/doctrine-orm-module": "dev-master",
-        "doctrine/doctrine-module": "dev-master"
+        "zendframework/zendframework": "*",
+        "doctrine/doctrine-orm-module": "*",
+        "doctrine/doctrine-module": "*"
     },
     "suggest": {
         "gedmo/doctrine-extensions": "dev-master"
